Pull translations from Transifex. Added pt_BR.po

--- a/po/es_AR.po
+++ b/po/es_AR.po
@@ -1,7 +1,7 @@
 # Spanish (Argentinian) translation for Audacious Plugins
 # Copyright (C) Audacious translators
 # This file is distributed under the same license as the Audacious Plugins package.
-#
+# 
 # Translators:
 # Adrián Ramirez Escalante <buried.prophet@gmail.com>, 2012.
 # Cosme Domínguez Díaz <cosme.ddiaz@gmail.com>, 2010.
@@ -11,17 +11,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"POT-Creation-Date: 2012-07-25 20:34-0400\n"
 "PO-Revision-Date: 2012-08-11 00:44+0000\n"
 "Last-Translator: Adrián Ramirez Escalante <buried.prophet@gmail.com>\n"
 "Language-Team: Spanish (Argentinian)\n"
-"Language: es_AR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: es_AR\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: src/aac/libmp4.c:931
+#: src/aac/libmp4.c:930
 msgid "AAC Decoder"
 msgstr "Decodificador AAC"
 
@@ -292,9 +292,7 @@ msgstr "Plug-AMIDI (Reproductor MIDI)"
 msgid ""
 "You have not selected any sequencer ports for MIDI playback.  You can do so "
 "in the MIDI plugin preferences."
-msgstr ""
-"No tiene seleccionado ningún puerto secuenciador para la reproducción MIDI.  "
-"Puede hacerlo en la preferencias del complemento MIDI."
+msgstr "No tiene seleccionado ningún puerto secuenciador para la reproducción MIDI.  Puede hacerlo en la preferencias del complemento MIDI."
 
 #: src/amidi-plug/backend-alsa/b-alsa.c:35
 msgid "ALSA Backend "
@@ -302,24 +300,10 @@ msgstr "Motor ALSA "
 
 #: src/amidi-plug/backend-alsa/b-alsa.c:37
 msgid ""
-"This backend sends MIDI events to a group of user-chosen ALSA sequencer "
-"ports. The ALSA sequencer interface is very versatile, it can provide ports "
-"for audio cards hardware synthesizers (i.e. emu10k1) but also for software "
-"synths, external devices, etc.\n"
-"This backend does not produce audio, MIDI events are handled directly from "
-"devices/programs behind the ALSA ports; in example, MIDI events sent to the "
-"hardware synth will be directly played.\n"
+"This backend sends MIDI events to a group of user-chosen ALSA sequencer ports. The ALSA sequencer interface is very versatile, it can provide ports for audio cards hardware synthesizers (i.e. emu10k1) but also for software synths, external devices, etc.\n"
+"This backend does not produce audio, MIDI events are handled directly from devices/programs behind the ALSA ports; in example, MIDI events sent to the hardware synth will be directly played.\n"
 "Backend written by Giacomo Lozito."
-msgstr ""
-"Este motor envía eventos MIDI a un grupo de puertos secuenciadores ALSA "
-"definidos. El interfaz secuenciador ALSA es muy versátil, puede proporcionar "
-"puertos para sintetizadores hardware (p. ej. emu10k1) pero también "
-"sintetizadores software, dispositivos externos, etc.\n"
-"Este motor no produce sonido, los eventos MIDI son manejados directamente "
-"por los dispositivos/programas tras los puertos ALSA; por ejemplo, los "
-"eventos MIDI enviados a un sintetizador hardware serán reproducidos "
-"directamente.\n"
-"Motor escrito por Giacomo Lozito."
+msgstr "Este motor envía eventos MIDI a un grupo de puertos secuenciadores ALSA definidos. El interfaz secuenciador ALSA es muy versátil, puede proporcionar puertos para sintetizadores hardware (p. ej. emu10k1) pero también sintetizadores software, dispositivos externos, etc.\nEste motor no produce sonido, los eventos MIDI son manejados directamente por los dispositivos/programas tras los puertos ALSA; por ejemplo, los eventos MIDI enviados a un sintetizador hardware serán reproducidos directamente.\nMotor escrito por Giacomo Lozito."
 
 #: src/amidi-plug/backend-fluidsynth/b-fluidsynth.c:38
 msgid "FluidSynth Backend "
@@ -327,20 +311,10 @@ msgstr "Motor FluidSynth "
 
 #: src/amidi-plug/backend-fluidsynth/b-fluidsynth.c:40
 msgid ""
-"This backend produces audio by sending MIDI events to FluidSynth, a real-"
-"time software synthesizer based on the SoundFont2 specification (www."
-"fluidsynth.org).\n"
-"Produced audio can be manipulated via player effect plugins and is processed "
-"by chosen output plugin.\n"
+"This backend produces audio by sending MIDI events to FluidSynth, a real-time software synthesizer based on the SoundFont2 specification (www.fluidsynth.org).\n"
+"Produced audio can be manipulated via player effect plugins and is processed by chosen output plugin.\n"
 "Backend written by Giacomo Lozito."
-msgstr ""
-"Este backend reproduce el audio enviando eventos MIDI a FluidSynth, un "
-"programa sintetizador en tiempo real, basado en la especificación "
-"SoundFont2.\n"
-"(www.fluidsynth.org)\n"
-"El audio producido puede ser manejado por medio de plugins de efectos en el "
-"reproductor y es procesado por el plugin de salida elegido.\n"
-"Backend escrito por Giacomo Lozito."
+msgstr "Este backend reproduce el audio enviando eventos MIDI a FluidSynth, un programa sintetizador en tiempo real, basado en la especificación SoundFont2.\n(www.fluidsynth.org)\nEl audio producido puede ser manejado por medio de plugins de efectos en el reproductor y es procesado por el plugin de salida elegido.\nBackend escrito por Giacomo Lozito."
 
 #: src/amidi-plug/i_configure-alsa.c:322
 msgid "Port"
@@ -374,9 +348,7 @@ msgstr "Ajustes del mezclador"
 msgid ""
 "<span size=\"smaller\">ALSA\n"
 "backend</span>"
-msgstr ""
-"<span size=\"smaller\">motor\n"
-"ALSA</span>"
+msgstr "<span size=\"smaller\">motor\nALSA</span>"
 
 #: src/amidi-plug/i_configure-ap.c:57
 msgid "AMIDI-Plug - backend information"
@@ -522,9 +494,7 @@ msgstr "Hz "
 msgid ""
 "<span size=\"smaller\">FluidSynth\n"
 "backend</span>"
-msgstr ""
-"<span size=\"smaller\">Motor\n"
-"FluidSynth</span>"
+msgstr "<span size=\"smaller\">Motor\nFluidSynth</span>"
 
 #: src/amidi-plug/i_fileinfo.c:169
 msgid "Name:"
@@ -619,10 +589,7 @@ msgid ""
 "Triggers OSD when, during playback, the song title changes but the filename "
 "is the same. This is mostly useful to display title changes in internet "
 "streams."
-msgstr ""
-"Avisa cuando, durante la reproducción, el título de la canción cambia pero "
-"el nombre de archivo es el mismo. Esto es principalmente útil para mostrar "
-"cambios de título en los flujos de Internet."
+msgstr "Avisa cuando, durante la reproducción, el título de la canción cambia pero el nombre de archivo es el mismo. Esto es principalmente útil para mostrar cambios de título en los flujos de Internet."
 
 #: src/aosd/aosd_trigger.c:86
 msgid "Pause On"
@@ -754,13 +721,8 @@ msgstr "Administrador de composición detectado"
 #: src/aosd/aosd_ui.c:791
 msgid ""
 "Composite manager not detected;\n"
-"unless you know that you have one running, please activate a composite "
-"manager otherwise the OSD won't work properly"
-msgstr ""
-"Administrador de composición no detectado;\n"
-"a menos que sepa que tiene uno ejecutándose, por favor active un "
-"administrador de composición o las notificaciones no funcionarán "
-"correctamente"
+"unless you know that you have one running, please activate a composite manager otherwise the OSD won't work properly"
+msgstr "Administrador de composición no detectado;\na menos que sepa que tiene uno ejecutándose, por favor active un administrador de composición o las notificaciones no funcionarán correctamente"
 
 #: src/aosd/aosd_ui.c:799
 msgid "Composite manager not required for fake transparency"
@@ -1010,29 +972,22 @@ msgstr "Aumentar la reverberación"
 
 #: src/console/configure.c:270
 msgid ""
-"The default song length, expressed in seconds, is used for songs that do not "
-"provide length information (i.e. looping tracks)."
-msgstr ""
-"La longitud de canción predeterminada, expresada en segundos, es usada para "
-"canciones que no preveén información de longitud (es decir pistas cíclicas)."
+"The default song length, expressed in seconds, is used for songs that do not"
+" provide length information (i.e. looping tracks)."
+msgstr "La longitud de canción predeterminada, expresada en segundos, es usada para canciones que no preveén información de longitud (es decir pistas cíclicas)."
 
 #: src/crossfade/crossfade.c:83
 msgid ""
 "Crossfading failed because the songs had a different number of channels.  "
 "You can use the Channel Mixer to convert the songs to the same number of "
 "channels."
-msgstr ""
-"El fundido de pistas falló porque las canciones tiene distintas cantidades "
-"de canales.  Puede usar el Mezclador de Canales para igualarlos."
+msgstr "El fundido de pistas falló porque las canciones tiene distintas cantidades de canales.  Puede usar el Mezclador de Canales para igualarlos."
 
 #: src/crossfade/crossfade.c:90
 msgid ""
 "Crossfading failed because the songs had different sample rates.  You can "
 "use the Sample Rate Converter to convert the songs to the same sample rate."
-msgstr ""
-"El fundido de pistas falló porque las canciones tiene distintas "
-"velocidades.  Puede usar el Convertidor de Muestreo de Velocidad para "
-"igualarlos."
+msgstr "El fundido de pistas falló porque las canciones tiene distintas velocidades.  Puede usar el Convertidor de Muestreo de Velocidad para igualarlos."
 
 #: src/crossfade/crossfade.c:260
 msgid "<b>Crossfade</b>"
@@ -1768,14 +1723,10 @@ msgstr "(ninguno)"
 
 #: src/hotkey/gui.c:234
 msgid ""
-"It is not recommended to bind the primary mouse buttons without "
-"modificators.\n"
+"It is not recommended to bind the primary mouse buttons without modificators.\n"
 "\n"
 "Do you want to continue?"
-msgstr ""
-"No se recomienda asociar los botones principales del mouse sin cambios.\n"
-"\n"
-"¿Quiere continuar?"
+msgstr "No se recomienda asociar los botones principales del mouse sin cambios.\n\n¿Quiere continuar?"
 
 #: src/hotkey/gui.c:236
 msgid "Binding mouse buttons"
@@ -1789,9 +1740,7 @@ msgstr "Configuración de atajos de teclado"
 msgid ""
 "Press a key combination inside a text field.\n"
 "You can also bind mouse buttons."
-msgstr ""
-"Pulse una combinación de teclas dentro del campo de texto.\n"
-"También puede asociar botones del ratón."
+msgstr "Pulse una combinación de teclas dentro del campo de texto.\nTambién puede asociar botones del ratón."
 
 #: src/hotkey/gui.c:407
 msgid "Hotkeys:"
@@ -1831,11 +1780,7 @@ msgid ""
 "<small>Separate multiple paths with a colon.\n"
 "These paths are searched in addition to LADSPA_PATH.\n"
 "After adding new paths, press Enter to scan for new plugins.</small>"
-msgstr ""
-"<small>Separe múltiples rutas por dos puntos.\n"
-"Estas rutas se utilizan además de LADSPA_PATH.\n"
-"Tras añadir nuevas rutas, pulse Intro para buscar complementos nuevos.</"
-"small>"
+msgstr "<small>Separe múltiples rutas por dos puntos.\nEstas rutas se utilizan además de LADSPA_PATH.\nTras añadir nuevas rutas, pulse Intro para buscar complementos nuevos.</small>"
 
 #: src/ladspa/plugin.c:592
 msgid "Available plugins:"
@@ -1868,10 +1813,7 @@ msgid ""
 "%s: could not read LIRC config file\n"
 "%s: please read the documentation of LIRC\n"
 "%s: how to create a proper config file\n"
-msgstr ""
-"%s: no se puede leer el archivo de configuración de LIRC\n"
-"%s: por favor lea la documentación de LIRC\n"
-"%s: en el tópico \"Cómo crear un archivo de configuración adecuado\"\n"
+msgstr "%s: no se puede leer el archivo de configuración de LIRC\n%s: por favor lea la documentación de LIRC\n%s: en el tópico \"Cómo crear un archivo de configuración adecuado\"\n"
 
 #: src/lirc/lirc.c:115
 #, c-format
@@ -2037,7 +1979,7 @@ msgstr ""
 msgid "PLS Playlists"
 msgstr ""
 
-#: src/psf/plugin.c:263
+#: src/psf/plugin.c:262
 msgid "OpenPSF PSF1/PSF2 Decoder"
 msgstr ""
 
@@ -2166,9 +2108,7 @@ msgstr "Album Desconocido"
 msgid ""
 "%s\n"
 " on %s by %s"
-msgstr ""
-"%s\n"
-" en %s por %s"
+msgstr "%s\n en %s por %s"
 
 #: src/search-tool/search-tool.c:633
 #, c-format
@@ -2185,12 +2125,8 @@ msgid ""
 msgid_plural ""
 "%s\n"
 " %s, %d songs"
-msgstr[0] ""
-"%s\n"
-" %s, %d canción"
-msgstr[1] ""
-"%s\n"
-" %s, %d canciones"
+msgstr[0] "%s\n %s, %d canción"
+msgstr[1] "%s\n %s, %d canciones"
 
 #: src/search-tool/search-tool.c:641
 #, c-format
@@ -2200,12 +2136,8 @@ msgid ""
 msgid_plural ""
 "%s\n"
 " %d songs by %s"
-msgstr[0] ""
-"%s\n"
-" %d canción por %s"
-msgstr[1] ""
-"%s\n"
-" %d canciones por %s"
+msgstr[0] "%s\n %d canción por %s"
+msgstr[1] "%s\n %d canciones por %s"
 
 #: src/search-tool/search-tool.c:682
 msgid "_Create Playlist"
@@ -2223,9 +2155,7 @@ msgstr "Buscar biblioteca"
 msgid ""
 "To import your music library into Audacious, choose a folder and then click "
 "the \"refresh\" icon."
-msgstr ""
-"Para importar su colección musical en Audacious, elija una carpeta y pulse "
-"el botón «actualizar»."
+msgstr "Para importar su colección musical en Audacious, elija una carpeta y pulse el botón «actualizar»."
 
 #: src/search-tool/search-tool.c:742
 msgid "Please wait ..."
@@ -2667,9 +2597,7 @@ msgstr "Actualizar lista"
 
 #: src/skins/ui_manager.c:233
 msgid "Refreshes metadata associated with a playlist entry."
-msgstr ""
-"Actualiza los metadatos asociados con una entrada de la lista de "
-"reproducción."
+msgstr "Actualiza los metadatos asociados con una entrada de la lista de reproducción."
 
 #: src/skins/ui_manager.c:236
 msgid "Playlist Manager"
@@ -2715,9 +2643,7 @@ msgstr "Buscar y seleccionar"
 msgid ""
 "Searches the playlist and selects playlist entries based on specific "
 "criteria."
-msgstr ""
-"Busca en la lista de reproducción y selecciona las entradas que cumplen un "
-"criterio específico."
+msgstr "Busca en la lista de reproducción y selecciona las entradas que cumplen un criterio específico."
 
 #: src/skins/ui_manager.c:265
 msgid "Invert Selection"
@@ -2787,9 +2713,7 @@ msgstr "Por nombre de archivo"
 
 #: src/skins/ui_manager.c:298
 msgid "Removes duplicate entries from the playlist by filename."
-msgstr ""
-"Elimina las entradas duplicadas de la lista de reproducción por nombre de "
-"archivo."
+msgstr "Elimina las entradas duplicadas de la lista de reproducción por nombre de archivo."
 
 #: src/skins/ui_manager.c:301 src/skins/ui_manager.c:341
 #: src/skins/ui_manager.c:371
@@ -2798,9 +2722,7 @@ msgstr "Por ruta y nombre de archivo"
 
 #: src/skins/ui_manager.c:302
 msgid "Removes duplicate entries from the playlist by their full path."
-msgstr ""
-"Elimina las entradas duplicadas de la lista de reproducción por su ruta "
-"completa."
+msgstr "Elimina las entradas duplicadas de la lista de reproducción por su ruta completa."
 
 #: src/skins/ui_manager.c:305
 msgid "Remove Unselected"
@@ -3070,15 +2992,11 @@ msgstr "Buscar entradas en la lista de reproducción activa"
 
 #: src/skins/ui_playlist.c:253
 msgid ""
-"Select entries in playlist by filling one or more fields. Fields use regular "
-"expressions syntax, case-insensitive. If you don't know how regular "
+"Select entries in playlist by filling one or more fields. Fields use regular"
+" expressions syntax, case-insensitive. If you don't know how regular "
 "expressions work, simply insert a literal portion of what you're searching "
 "for."
-msgstr ""
-"Seleccione entradas en la lista de reproducción indicando uno o más campos. "
-"Los campos utilizan sintaxis de expresiones regulares, sin distinguir "
-"mayúsculas de minúsculas. Si no sabe como funcionan las expresiones "
-"regulares, tan solo escriba la parte del literal que quiere buscar."
+msgstr "Seleccione entradas en la lista de reproducción indicando uno o más campos. Los campos utilizan sintaxis de expresiones regulares, sin distinguir mayúsculas de minúsculas. Si no sabe como funcionan las expresiones regulares, tan solo escriba la parte del literal que quiere buscar."
 
 #: src/skins/ui_playlist.c:261
 msgid "Title: "
@@ -3143,10 +3061,7 @@ msgid ""
 "Sndio Output Plugin\n"
 "\n"
 "Written by Thomas Pfaff <tpfaff@tp76.info>\n"
-msgstr ""
-"Plugin de Salida Sndio\n"
-"\n"
-"Escrito por Thomas Pfaff <tpfaff@tp76.info>\n"
+msgstr "Plugin de Salida Sndio\n\nEscrito por Thomas Pfaff <tpfaff@tp76.info>\n"
 
 #: src/sndio/sndio.c:259
 msgid "Unsupported format"
@@ -3157,10 +3072,7 @@ msgid ""
 "A format not supported by the audio device was requested.\n"
 "\n"
 "Please try again with the sndiod(1) server running."
-msgstr ""
-"Un formato no soportado por el dispositivo de audio fue solicitado.\n"
-"\n"
-"Por favor,intente de nuevo con el servidor sndiod(1) ejecutándose."
+msgstr "Un formato no soportado por el dispositivo de audio fue solicitado.\n\nPor favor,intente de nuevo con el servidor sndiod(1) ejecutándose."
 
 #: src/sndio/sndio.c:403
 msgid "sndio device"
@@ -3189,16 +3101,12 @@ msgstr "Comando para ejecutar al final de una canción."
 
 #: src/song_change/song_change.c:450
 msgid "Command to run when Audacious reaches the end of the playlist."
-msgstr ""
-"Comando para ejecutar cuando Audacious llega al final de una lista de "
-"reproducción."
+msgstr "Comando para ejecutar cuando Audacious llega al final de una lista de reproducción."
 
 #: src/song_change/song_change.c:456
 msgid ""
 "Command to run when title changes for a song (i.e. network streams titles)."
-msgstr ""
-"Comando para ejecutar cuando el título cambia para una canción (es decir, "
-"títulos de flujos en red)"
+msgstr "Comando para ejecutar cuando el título cambia para una canción (es decir, títulos de flujos en red)"
 
 #: src/song_change/song_change.c:462
 msgid ""
@@ -3217,30 +3125,13 @@ msgid ""
 "%a: Artist\n"
 "%b: Album\n"
 "%T: Track title"
-msgstr ""
-"Puede usar los siguientes cadenas de formatos, las cuales\n"
-"serán reemplazadas antes de invocar al comando\n"
-"(no todos son útiles para el comando finalizar lista de reproducción):\n"
-"\n"
-"%F: Frecuencia (en hertz)\n"
-"%c: Número de canales\n"
-"%f: Nombre de archivo (ruta completa)\n"
-"%l: Duración (en milisegundos)\n"
-"%n o %s: Nombre de la canción\n"
-"%r: Velocidad (en bits por segundo)\n"
-"%t: Posición en la lista de reproducción (%02d)\n"
-"%p: Reproduciendo actualmente (1 or 0)\n"
-"%a: Artista\n"
-"%b: Album\n"
-"%T: Título de la pista"
+msgstr "Puede usar los siguientes cadenas de formatos, las cuales\nserán reemplazadas antes de invocar al comando\n(no todos son útiles para el comando finalizar lista de reproducción):\n\n%F: Frecuencia (en hertz)\n%c: Número de canales\n%f: Nombre de archivo (ruta completa)\n%l: Duración (en milisegundos)\n%n o %s: Nombre de la canción\n%r: Velocidad (en bits por segundo)\n%t: Posición en la lista de reproducción (%02d)\n%p: Reproduciendo actualmente (1 or 0)\n%a: Artista\n%b: Album\n%T: Título de la pista"
 
 #: src/song_change/song_change.c:489
 msgid ""
 "<span size='small'>Parameters passed to the shell should be encapsulated in "
 "quotes. Doing otherwise is a security risk.</span>"
-msgstr ""
-"<span size='small'>Los parámetros enviados a la consola se deberían "
-"encapsular con comillas. De otra forma existe un riesgo de seguridad.</span>"
+msgstr "<span size='small'>Los parámetros enviados a la consola se deberían encapsular con comillas. De otra forma existe un riesgo de seguridad.</span>"
 
 #: src/song_change/song_change.c:500
 msgid "Commands"
@@ -3335,7 +3226,7 @@ msgstr "Decodificador VTX"
 msgid "WavPack Decoder"
 msgstr "Decodificador WavPack"
 
-#: src/xsf/plugin.c:273
+#: src/xsf/plugin.c:272
 msgid "2SF Decoder"
 msgstr "Decodificador 2SF"
 
