--- a/po/ko.po
+++ b/po/ko.po
@@ -1,7 +1,7 @@
 # Korean translation for Audacious Plugins
 # Copyright (C) Audacious translators
 # This file is distributed under the same license as the Audacious Plugins package.
-#
+# 
 # Translators:
 # 		ChoSeongWoo <syn333@gmail.com>, 2008.
 #       Jaegeum Choe <baedaron@hananet.net>, 2001.
@@ -13,17 +13,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Audacious Plugins\n"
 "Report-Msgid-Bugs-To: http://redmine.audacious-media-player.org/\n"
-"POT-Creation-Date: 2012-08-11 13:57-0400\n"
+"POT-Creation-Date: 2012-07-25 20:34-0400\n"
 "PO-Revision-Date: 2012-08-04 07:07+0000\n"
 "Last-Translator: Darkcircle <darkcircle.0426@gmail.com>\n"
 "Language-Team: Korean\n"
-"Language: ko\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0\n"
+"Language: ko\n"
+"Plural-Forms: nplurals=1; plural=0;\n"
 
-#: src/aac/libmp4.c:931
+#: src/aac/libmp4.c:930
 msgid "AAC Decoder"
 msgstr "AAC 디코더"
 
@@ -232,55 +232,7 @@ msgid ""
 "    Display a reminder when the alarm goes off,\n"
 "    type the reminder in the box and turn on the\n"
 "    toggle button if you want it to be shown.\n"
-msgstr ""
-"\n"
-"시간\n"
-"  다음 시간에 알림: \n"
-"    알림이 울릴 시간입니다.\n"
-"\n"
-"  다음 시간후 조용히: \n"
-"    이 시간이 흐른 이후에 알림을 멈춥니다.\n"
-"       (기상 대화상자가 닫히지 않았을 경우)\n"
-"\n"
-"\n"
-"날짜\n"
-"  요일:\n"
-"    알림을 울릴 요일을 선택합니다.\n"
-"\n"
-"  시간:\n"
-"    각각의 날짜에 알릴 시간을 선택하거나,\n"
-"    기본 시간을 사용하려면 상태 전환단추를\n"
-"    선택합니다.\n"
-"   \n"
-"\n"
-"음량\n"
-"  점진적 음량 변화: \n"
-"    정해진 시간동안 정한 음량 만큼 음량을 서서히\n"
-"    크게 합니다.\n"
-"\n"
-"  시작: \n"
-"    이 음량부터 서서히 크게 합니다.\n"
-"\n"
-"  끝: \n"
-"    음량이 서서히 커지는 것을 멈출 음량값입니다.\n"
-"    점진적 음량 변화 시간이 0이면 이 값을 선택\n"
-"    하고 재생을 시작합니다.\n"
-"\n"
-"\n"
-"옵션:\n"
-"  추가 명령:\n"
-"    알림 시간에 명령을 실행합니다.\n"
-"\n"
-"  재생 목록: \n"
-"    재생할 곡을 불러올 재생 목록을 불러옵니다. \n"
-"    재생 목록이 주어지지 않으면 현재 목록에 있는\n"
-"    곡을 사용할 것입니다.\n"
-"    mp3/ogg 스트림의 주소를 입력할 수도 있습니다.\n"
-"\n"
-"  약속 알리미:\n"
-"    타이머가 끝나면 약속 알리미를 보여줍니다.\n"
-"    약속 알리미를 보이고 싶으면 약속 내용을\n"
-"    상자에 입력하고 전환단추를 켭니다.\n"
+msgstr "\n시간\n  다음 시간에 알림: \n    알림이 울릴 시간입니다.\n\n  다음 시간후 조용히: \n    이 시간이 흐른 이후에 알림을 멈춥니다.\n       (기상 대화상자가 닫히지 않았을 경우)\n\n\n날짜\n  요일:\n    알림을 울릴 요일을 선택합니다.\n\n  시간:\n    각각의 날짜에 알릴 시간을 선택하거나,\n    기본 시간을 사용하려면 상태 전환단추를\n    선택합니다.\n   \n\n음량\n  점진적 음량 변화: \n    정해진 시간동안 정한 음량 만큼 음량을 서서히\n    크게 합니다.\n\n  시작: \n    이 음량부터 서서히 크게 합니다.\n\n  끝: \n    음량이 서서히 커지는 것을 멈출 음량값입니다.\n    점진적 음량 변화 시간이 0이면 이 값을 선택\n    하고 재생을 시작합니다.\n\n\n옵션:\n  추가 명령:\n    알림 시간에 명령을 실행합니다.\n\n  재생 목록: \n    재생할 곡을 불러올 재생 목록을 불러옵니다. \n    재생 목록이 주어지지 않으면 현재 목록에 있는\n    곡을 사용할 것입니다.\n    mp3/ogg 스트림의 주소를 입력할 수도 있습니다.\n\n  약속 알리미:\n    타이머가 끝나면 약속 알리미를 보여줍니다.\n    약속 알리미를 보이고 싶으면 약속 내용을\n    상자에 입력하고 전환단추를 켭니다.\n"
 
 #: src/alarm/interface.c:1157 src/skins/ui_manager.c:390
 msgid "Help"
@@ -342,9 +294,7 @@ msgstr "AMIDI-Plug (MIDI 재생기)"
 msgid ""
 "You have not selected any sequencer ports for MIDI playback.  You can do so "
 "in the MIDI plugin preferences."
-msgstr ""
-"미디 재생을 위한 시퀀서 포트를 선택하지 않았습니다. 미디 플러그인 기본 설정에"
-"서 설정할 수 있습니다."
+msgstr "미디 재생을 위한 시퀀서 포트를 선택하지 않았습니다. 미디 플러그인 기본 설정에서 설정할 수 있습니다."
 
 #: src/amidi-plug/backend-alsa/b-alsa.c:35
 msgid "ALSA Backend "
@@ -352,23 +302,10 @@ msgstr "ALSA 백엔드"
 
 #: src/amidi-plug/backend-alsa/b-alsa.c:37
 msgid ""
-"This backend sends MIDI events to a group of user-chosen ALSA sequencer "
-"ports. The ALSA sequencer interface is very versatile, it can provide ports "
-"for audio cards hardware synthesizers (i.e. emu10k1) but also for software "
-"synths, external devices, etc.\n"
-"This backend does not produce audio, MIDI events are handled directly from "
-"devices/programs behind the ALSA ports; in example, MIDI events sent to the "
-"hardware synth will be directly played.\n"
+"This backend sends MIDI events to a group of user-chosen ALSA sequencer ports. The ALSA sequencer interface is very versatile, it can provide ports for audio cards hardware synthesizers (i.e. emu10k1) but also for software synths, external devices, etc.\n"
+"This backend does not produce audio, MIDI events are handled directly from devices/programs behind the ALSA ports; in example, MIDI events sent to the hardware synth will be directly played.\n"
 "Backend written by Giacomo Lozito."
-msgstr ""
-"이 백엔드는 사용자가 선택한 ALSA 시퀀서 포트의 그룹에 미디 이벤트를 전송합니"
-"다. ALSA 시퀀서 인터페이스는 매우 다양한 기능을 갖추고 있는데 오디오 카드 하"
-"드웨어 신디자이저(예: emu10k1)뿐만 아니라 소프트웨어 신디사이저, 외부 장치 등"
-"에 대한 포트를 제공할 수 있습니다.\n"
-"이 백엔드는 소리를 만들어내는게 아니라, ALSA 포트 뒤에 있는 장치/프로그램에"
-"서 직접적으로 미디 이벤트를 다룹니다. 예를 들자면 오디오를 직접 재생할 하드웨"
-"어 신디사이저로 미디 이벤트를 보냅니다.이 벡엔드는 Giacomo Lozito가 작성했습"
-"니다."
+msgstr "이 백엔드는 사용자가 선택한 ALSA 시퀀서 포트의 그룹에 미디 이벤트를 전송합니다. ALSA 시퀀서 인터페이스는 매우 다양한 기능을 갖추고 있는데 오디오 카드 하드웨어 신디자이저(예: emu10k1)뿐만 아니라 소프트웨어 신디사이저, 외부 장치 등에 대한 포트를 제공할 수 있습니다.\n이 백엔드는 소리를 만들어내는게 아니라, ALSA 포트 뒤에 있는 장치/프로그램에서 직접적으로 미디 이벤트를 다룹니다. 예를 들자면 오디오를 직접 재생할 하드웨어 신디사이저로 미디 이벤트를 보냅니다.이 벡엔드는 Giacomo Lozito가 작성했습니다."
 
 #: src/amidi-plug/backend-fluidsynth/b-fluidsynth.c:38
 msgid "FluidSynth Backend "
@@ -376,18 +313,10 @@ msgstr "FluidSynth 백엔드"
 
 #: src/amidi-plug/backend-fluidsynth/b-fluidsynth.c:40
 msgid ""
-"This backend produces audio by sending MIDI events to FluidSynth, a real-"
-"time software synthesizer based on the SoundFont2 specification (www."
-"fluidsynth.org).\n"
-"Produced audio can be manipulated via player effect plugins and is processed "
-"by chosen output plugin.\n"
+"This backend produces audio by sending MIDI events to FluidSynth, a real-time software synthesizer based on the SoundFont2 specification (www.fluidsynth.org).\n"
+"Produced audio can be manipulated via player effect plugins and is processed by chosen output plugin.\n"
 "Backend written by Giacomo Lozito."
-msgstr ""
-"이 백엔드는 SoundFont2 명세(www.fluidsynth.org)를 따르는 실시한 소프트웨어 신"
-"디사이저인 FluidSynth에 미디 이벤트를 보내어 소리를 만들어냅니다.\n"
-"만들어낸 소리는 플레이어 효과 플러그인을 통해 조작할 수 있으며, 선택한 출력 "
-"플러그인으로 처리합니다.\n"
-"이 백엔드는 Giacomo Lozito가 작성했습니다."
+msgstr "이 백엔드는 SoundFont2 명세(www.fluidsynth.org)를 따르는 실시한 소프트웨어 신디사이저인 FluidSynth에 미디 이벤트를 보내어 소리를 만들어냅니다.\n만들어낸 소리는 플레이어 효과 플러그인을 통해 조작할 수 있으며, 선택한 출력 플러그인으로 처리합니다.\n이 백엔드는 Giacomo Lozito가 작성했습니다."
 
 #: src/amidi-plug/i_configure-alsa.c:322
 msgid "Port"
@@ -421,9 +350,7 @@ msgstr "음량 조절기 설정"
 msgid ""
 "<span size=\"smaller\">ALSA\n"
 "backend</span>"
-msgstr ""
-"<span size=\"smaller\">ALSA\n"
-"백엔드</span>"
+msgstr "<span size=\"smaller\">ALSA\n백엔드</span>"
 
 #: src/amidi-plug/i_configure-ap.c:57
 msgid "AMIDI-Plug - backend information"
@@ -465,9 +392,7 @@ msgstr "(가능한 경우) 미디 파일에서 가사 가져오기"
 msgid ""
 "<span size=\"smaller\">AMIDI\n"
 "Plug</span>"
-msgstr ""
-"<span size=\"smaller\">AMIDI\n"
-"Plug</span>"
+msgstr "<span size=\"smaller\">AMIDI\nPlug</span>"
 
 #: src/amidi-plug/i_configure.c:64
 msgid "AMIDI-Plug - select file"
@@ -571,9 +496,7 @@ msgstr "Hz "
 msgid ""
 "<span size=\"smaller\">FluidSynth\n"
 "backend</span>"
-msgstr ""
-"<span size=\"smaller\">FluidSynth\n"
-"백엔드</span>"
+msgstr "<span size=\"smaller\">FluidSynth\n백엔드</span>"
 
 #: src/amidi-plug/i_fileinfo.c:169
 msgid "Name:"
@@ -668,9 +591,7 @@ msgid ""
 "Triggers OSD when, during playback, the song title changes but the filename "
 "is the same. This is mostly useful to display title changes in internet "
 "streams."
-msgstr ""
-"재생할 때 OSD를 시작하면 곡 제목은 바뀌지만 파일 이름은 그대로 입니다. 인터"
-"넷 스트림의 제목을 바꾸어서 보여줄 대부분의 경우에 유용합니다."
+msgstr "재생할 때 OSD를 시작하면 곡 제목은 바뀌지만 파일 이름은 그대로 입니다. 인터넷 스트림의 제목을 바꾸어서 보여줄 대부분의 경우에 유용합니다."
 
 #: src/aosd/aosd_trigger.c:86
 msgid "Pause On"
@@ -802,12 +723,8 @@ msgstr "합성 관리자를 삭제했습니다"
 #: src/aosd/aosd_ui.c:791
 msgid ""
 "Composite manager not detected;\n"
-"unless you know that you have one running, please activate a composite "
-"manager otherwise the OSD won't work properly"
-msgstr ""
-"합성 관리자를 삭제하지 못했습니다.\n"
-"적어도 하나가 실행중인지 알지 못한다면, 합성 관리자를 활성화 해 주시기 바랍니"
-"다. 그렇지 않으면 OSD가 제대로 동작하지 않을 것입니다"
+"unless you know that you have one running, please activate a composite manager otherwise the OSD won't work properly"
+msgstr "합성 관리자를 삭제하지 못했습니다.\n적어도 하나가 실행중인지 알지 못한다면, 합성 관리자를 활성화 해 주시기 바랍니다. 그렇지 않으면 OSD가 제대로 동작하지 않을 것입니다"
 
 #: src/aosd/aosd_ui.c:799
 msgid "Composite manager not required for fake transparency"
@@ -1057,28 +974,22 @@ msgstr "리버브 증가"
 
 #: src/console/configure.c:270
 msgid ""
-"The default song length, expressed in seconds, is used for songs that do not "
-"provide length information (i.e. looping tracks)."
-msgstr ""
-"초 단위로 표현하는 곡의 기본 길이는 길이 정보를 제공하지 않는 곡(반복 트랙)"
-"에 사용합니다."
+"The default song length, expressed in seconds, is used for songs that do not"
+" provide length information (i.e. looping tracks)."
+msgstr "초 단위로 표현하는 곡의 기본 길이는 길이 정보를 제공하지 않는 곡(반복 트랙)에 사용합니다."
 
 #: src/crossfade/crossfade.c:83
 msgid ""
 "Crossfading failed because the songs had a different number of channels.  "
 "You can use the Channel Mixer to convert the songs to the same number of "
 "channels."
-msgstr ""
-"곡이 다른 채널 수를 가지고 있어 크로스페이딩에 실패했습니다. 곡이 동일한 채"
-"널 수를 가지도록 변환하기 위해 채널 믹서를 사용할 수 있습니다."
+msgstr "곡이 다른 채널 수를 가지고 있어 크로스페이딩에 실패했습니다. 곡이 동일한 채널 수를 가지도록 변환하기 위해 채널 믹서를 사용할 수 있습니다."
 
 #: src/crossfade/crossfade.c:90
 msgid ""
 "Crossfading failed because the songs had different sample rates.  You can "
 "use the Sample Rate Converter to convert the songs to the same sample rate."
-msgstr ""
-"곡이 다른 샘플주파수를 가지고 있어 크로스페이딩에 실패했습니다. 곡이 동일한 "
-"샘플주파수를 가지도록 변환하기 위해 샘플 주파수 변환기를 사용할 수 있습니다."
+msgstr "곡이 다른 샘플주파수를 가지고 있어 크로스페이딩에 실패했습니다. 곡이 동일한 샘플주파수를 가지도록 변환하기 위해 샘플 주파수 변환기를 사용할 수 있습니다."
 
 #: src/crossfade/crossfade.c:260
 msgid "<b>Crossfade</b>"
@@ -1813,14 +1724,10 @@ msgstr "(없음)"
 
 #: src/hotkey/gui.c:234
 msgid ""
-"It is not recommended to bind the primary mouse buttons without "
-"modificators.\n"
+"It is not recommended to bind the primary mouse buttons without modificators.\n"
 "\n"
 "Do you want to continue?"
-msgstr ""
-"수정자 없이 주 마우스 단추를 할당 하는것은 추천하지 않습니다.\n"
-"\n"
-"계속 진행하시겠습니까?"
+msgstr "수정자 없이 주 마우스 단추를 할당 하는것은 추천하지 않습니다.\n\n계속 진행하시겠습니까?"
 
 #: src/hotkey/gui.c:236
 msgid "Binding mouse buttons"
@@ -1834,9 +1741,7 @@ msgstr "전역 단축키 플러그인 설정"
 msgid ""
 "Press a key combination inside a text field.\n"
 "You can also bind mouse buttons."
-msgstr ""
-"텍스트 필드에서 키 조합을 누르십시오.\n"
-"마우스 단추도 넣을 수 있습니다."
+msgstr "텍스트 필드에서 키 조합을 누르십시오.\n마우스 단추도 넣을 수 있습니다."
 
 #: src/hotkey/gui.c:407
 msgid "Hotkeys:"
@@ -1876,10 +1781,7 @@ msgid ""
 "<small>Separate multiple paths with a colon.\n"
 "These paths are searched in addition to LADSPA_PATH.\n"
 "After adding new paths, press Enter to scan for new plugins.</small>"
-msgstr ""
-"<small>여러 경로를 콜론으로 구분합니다.\n"
-"이 경로들은 LADSPA_PATH에서도 찾았습니다.\n"
-"새 경로를 추가한 다음 새 플러그인 검색을 위해 Enter 키를 누르세요.</small>"
+msgstr "<small>여러 경로를 콜론으로 구분합니다.\n이 경로들은 LADSPA_PATH에서도 찾았습니다.\n새 경로를 추가한 다음 새 플러그인 검색을 위해 Enter 키를 누르세요.</small>"
 
 #: src/ladspa/plugin.c:592
 msgid "Available plugins:"
@@ -1912,10 +1814,7 @@ msgid ""
 "%s: could not read LIRC config file\n"
 "%s: please read the documentation of LIRC\n"
 "%s: how to create a proper config file\n"
-msgstr ""
-"%s: LIRC 설정 파일을 읽을 수 없습니다\n"
-"%s: 적당한 설정 파일을 어떻게 만드는지\n"
-"%s: LIRC 문서를 읽어주시기 바랍니다\n"
+msgstr "%s: LIRC 설정 파일을 읽을 수 없습니다\n%s: 적당한 설정 파일을 어떻게 만드는지\n%s: LIRC 문서를 읽어주시기 바랍니다\n"
 
 #: src/lirc/lirc.c:115
 #, c-format
@@ -2081,7 +1980,7 @@ msgstr "OSS4 출력"
 msgid "PLS Playlists"
 msgstr "PLS 재생 목록"
 
-#: src/psf/plugin.c:263
+#: src/psf/plugin.c:262
 msgid "OpenPSF PSF1/PSF2 Decoder"
 msgstr "OpenPSF PSF1/PSF2 디코더"
 
@@ -2210,9 +2109,7 @@ msgstr "알 수 없는 음반"
 msgid ""
 "%s\n"
 " on %s by %s"
-msgstr ""
-"%3$s의\n"
-"%2$s에 있는 %1$s"
+msgstr "%3$s의\n%2$s에 있는 %1$s"
 
 #: src/search-tool/search-tool.c:633
 #, c-format
@@ -2228,9 +2125,7 @@ msgid ""
 msgid_plural ""
 "%s\n"
 " %s, %d songs"
-msgstr[0] ""
-"%s\n"
-" %s, %d개의 곡"
+msgstr[0] "%s\n %s, %d개의 곡"
 
 #: src/search-tool/search-tool.c:641
 #, c-format
@@ -2240,9 +2135,7 @@ msgid ""
 msgid_plural ""
 "%s\n"
 " %d songs by %s"
-msgstr[0] ""
-"%1$s\n"
-"%3$s의 곡 %2$d개\t"
+msgstr[0] "%1$s\n%3$s의 곡 %2$d개\t"
 
 #: src/search-tool/search-tool.c:682
 msgid "_Create Playlist"
@@ -2260,9 +2153,7 @@ msgstr "라이브러리 검색"
 msgid ""
 "To import your music library into Audacious, choose a folder and then click "
 "the \"refresh\" icon."
-msgstr ""
-"음악 라이브러리를 Audacious로 가져오려면 폴더를 선택하고 \"새로고침\"아이콘"
-"을 누르십시오."
+msgstr "음악 라이브러리를 Audacious로 가져오려면 폴더를 선택하고 \"새로고침\"아이콘을 누르십시오."
 
 #: src/search-tool/search-tool.c:742
 msgid "Please wait ..."
@@ -2750,8 +2641,7 @@ msgstr "검색하고 선택"
 msgid ""
 "Searches the playlist and selects playlist entries based on specific "
 "criteria."
-msgstr ""
-"재생 목록을 검색하고 지정한 검색어를 기반으로 재생 목록 항목을 선택합니다."
+msgstr "재생 목록을 검색하고 지정한 검색어를 기반으로 재생 목록 항목을 선택합니다."
 
 #: src/skins/ui_manager.c:265
 msgid "Invert Selection"
@@ -3100,14 +2990,11 @@ msgstr "활성 재생 목록에서 항목 검색"
 
 #: src/skins/ui_playlist.c:253
 msgid ""
-"Select entries in playlist by filling one or more fields. Fields use regular "
-"expressions syntax, case-insensitive. If you don't know how regular "
+"Select entries in playlist by filling one or more fields. Fields use regular"
+" expressions syntax, case-insensitive. If you don't know how regular "
 "expressions work, simply insert a literal portion of what you're searching "
 "for."
-msgstr ""
-"하나 이상의 칸을 채워 재생 목록의 항목을 검색합니다. 대소문자에 관계 없이 정"
-"규표현식 문법을 사용합니다. 정규표현식이 어떻게 동작하는지 모르신다면 검색할 "
-"문장 일부를 넣으시면 됩니다."
+msgstr "하나 이상의 칸을 채워 재생 목록의 항목을 검색합니다. 대소문자에 관계 없이 정규표현식 문법을 사용합니다. 정규표현식이 어떻게 동작하는지 모르신다면 검색할 문장 일부를 넣으시면 됩니다."
 
 #: src/skins/ui_playlist.c:261
 msgid "Title: "
@@ -3172,10 +3059,7 @@ msgid ""
 "Sndio Output Plugin\n"
 "\n"
 "Written by Thomas Pfaff <tpfaff@tp76.info>\n"
-msgstr ""
-"Sndio 출력 플러그인\n"
-"\n"
-"Thomas Pfaff <tpfaff@tp76.info>가 작성하였습니다\n"
+msgstr "Sndio 출력 플러그인\n\nThomas Pfaff <tpfaff@tp76.info>가 작성하였습니다\n"
 
 #: src/sndio/sndio.c:259
 msgid "Unsupported format"
@@ -3186,10 +3070,7 @@ msgid ""
 "A format not supported by the audio device was requested.\n"
 "\n"
 "Please try again with the sndiod(1) server running."
-msgstr ""
-"오디오 장치가 지원하지 않는 형식을 요청했습니다.\n"
-"\n"
-"sndiod(1) 서버를 실행하고 다시 시도해주시기 바랍니다."
+msgstr "오디오 장치가 지원하지 않는 형식을 요청했습니다.\n\nsndiod(1) 서버를 실행하고 다시 시도해주시기 바랍니다."
 
 #: src/sndio/sndio.c:403
 msgid "sndio device"
@@ -3242,30 +3123,13 @@ msgid ""
 "%a: Artist\n"
 "%b: Album\n"
 "%T: Track title"
-msgstr ""
-"명령을 호출하기 전에 대체할 다음의 형식 문자열을\n"
-"사용할 수 있습니다\n"
-"(재생 목록 마지막 시점의 명령으로 다 쓸모 있는것은 아닙니다):\n"
-"\n"
-"%F: 주파수(Hz 단위)\n"
-"%c: 채널 번호\n"
-"%f: 파일 이름(전체 경로)\n"
-"%l: 곡 길이(밀리초 단위)\n"
-"%n or %s: 곡 이름\n"
-"%r: 비트전송율(bps 단위)\n"
-"%t: 재생 목록 위치(%02d)\n"
-"%p: 현재 재생중 여부(1 or 0)\n"
-"%a: 음악가\n"
-"%b: 음반\n"
-"%T: 트랙 제목"
+msgstr "명령을 호출하기 전에 대체할 다음의 형식 문자열을\n사용할 수 있습니다\n(재생 목록 마지막 시점의 명령으로 다 쓸모 있는것은 아닙니다):\n\n%F: 주파수(Hz 단위)\n%c: 채널 번호\n%f: 파일 이름(전체 경로)\n%l: 곡 길이(밀리초 단위)\n%n or %s: 곡 이름\n%r: 비트전송율(bps 단위)\n%t: 재생 목록 위치(%02d)\n%p: 현재 재생중 여부(1 or 0)\n%a: 음악가\n%b: 음반\n%T: 트랙 제목"
 
 #: src/song_change/song_change.c:489
 msgid ""
 "<span size='small'>Parameters passed to the shell should be encapsulated in "
 "quotes. Doing otherwise is a security risk.</span>"
-msgstr ""
-"<span size='small'>쉘에 전달하는 인자는 따옴표로 감싸야 합니다. 그렇게 하지 "
-"않으면 보안 문제가 생깁니다.</span>"
+msgstr "<span size='small'>쉘에 전달하는 인자는 따옴표로 감싸야 합니다. 그렇게 하지 않으면 보안 문제가 생깁니다.</span>"
 
 #: src/song_change/song_change.c:500
 msgid "Commands"
@@ -3360,7 +3224,7 @@ msgstr "VTX 디코더"
 msgid "WavPack Decoder"
 msgstr "WavPack 디코더"
 
-#: src/xsf/plugin.c:273
+#: src/xsf/plugin.c:272
 msgid "2SF Decoder"
 msgstr "2SF 디코더"
 
